# orderbook-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TEST_GUIDE.md  config_example.json
.claude/: settings.local.json
src/: config.rs  lib.rs  main.rs
src/matching/: depth.rs  engine.rs  kafka_log.rs  kafka_order.rs  log.rs  mod.rs  order_book.rs  ordering.rs  redis_snapshot.rs
src/models/: mod.rs  models.rs  types.rs
src/utils/: bitmap.rs  error.rs  kafka.rs  mod.rs  redis.rs  time_window.rs  window.rs
tests/: integration_test.rs  log_verifier.rs
