[package]
name = "orderbook-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
erased-serde = "0.3"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
tokio = { version = "1.2.0", features = ["full"] }
toml = "0.4"
mini-redis = "0.4.1"
lazy_static = "1.4.0"
bytes = "1.5.0"
futures-util = "0.3.28"


