[package]
name = "orderbook-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "orderbook_rs"
path = "src/lib.rs"

[[bin]]
name = "orderbook-rs"
path = "src/main.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[bin]]
name = "log_verifier"
path = "tests/log_verifier.rs"

[dependencies]
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
tokio = { version = "1.2.0", features = ["full"] }
toml = "0.8.0"
redis = { version = "0.27", features = ["tokio-comp"] }
log = "0.4.14"
env_logger = { version = "0.10.0", features = [] }

